<?xml version="1.0" encoding="utf-8"?>
<resources>
    <plurals name="published_january">
        <item quantity="other">Опубликовано %d января</item>
    </plurals>
    <plurals name="published_february">
        <item quantity="other">Опубликовано %d февраля</item>
    </plurals>
    <plurals name="published_march">
        <item quantity="other">Опубликовано %d марта</item>
    </plurals>
    <plurals name="published_april">
        <item quantity="other">Опубликовано %d апреля</item>
    </plurals>
    <plurals name="published_may">
        <item quantity="other">Опубликовано %d мая</item>
    </plurals>
    <plurals name="published_june">
        <item quantity="other">Опубликовано %d июня</item>
    </plurals>
    <plurals name="published_july">
        <item quantity="other">Опубликовано %d июля</item>
    </plurals>
    <plurals name="published_august">
        <item quantity="other">Опубликовано %d августа</item>
    </plurals>
    <plurals name="published_september">
        <item quantity="other">Опубликовано %d сентября</item>
    </plurals>
    <plurals name="published_october">
        <item quantity="other">Опубликовано %d октября</item>
    </plurals>
    <plurals name="published_november">
        <item quantity="other">Опубликовано %d ноября</item>
    </plurals>
    <plurals name="published_december">
        <item quantity="other">Опубликовано %d декабря</item>
    </plurals>

    <plurals name="vacancies_count">
        <item quantity="one">%d вакансия</item>
        <item quantity="few">%d вакансии</item>
        <item quantity="other">%d вакансий</item>
    </plurals>

    <plurals name="vacancies_more_count">
        <item quantity="one">Ещё %d вакансия</item>
        <item quantity="few">Ещё %d вакансии</item>
        <item quantity="other">Ещё %d вакансий</item>
    </plurals>

    <plurals name="looking_number">
        <item quantity="one">Сейчас просматривает 1 человек</item>
        <item quantity="few">Сейчас просматривают %d человека</item>
        <item quantity="other">Сейчас просматривают %d человек</item>
    </plurals>

    <plurals name="looking_number_short">
        <item quantity="one">1 человек сейчас смотрит</item>
        <item quantity="few">%d человека сейчас смотрят</item>
        <item quantity="other">%d человек сейчас смотрят</item>
    </plurals>

    <plurals name="applied_number">
        <item quantity="one">%d человек уже откликнулся</item>
        <item quantity="few">%d человека уже откликнулись</item>
        <item quantity="other">%d человек уже откликнулись</item>
    </plurals>

    <plurals name="vacancies_number">
        <item quantity="one">%d вакансия</item>
        <item quantity="few">%d вакансии</item>
        <item quantity="other">%d вакансий</item>
    </plurals>

    <string name="app_name">JobFinder</string>
    <string name="send_to_to_mail">Отправили код на %1$s</string>
    <string name="required_experience">Требуемый опыт: %1$s</string>
    <string name="search_title">Поиск</string>
    <string name="liked_title">Избранное</string>
    <string name="applications_title">Отклики</string>
    <string name="messages_title">Сообщения</string>
    <string name="profile_title">Профиль</string>
    <string name="resume_for_application">Резюме для отклика</string>
    <string name="your_cover_letter">Ваше сопроводительное письмо</string>
    <string name="add_cover">Добавить сопроводительное</string>
    <string name="apply">Откликнуться</string>
    <string name="search_jobs">Поиск работы</string>
    <string name="continue_button_text">Продолжить</string>
    <string name="continue_with_password">Войти с паролем</string>
    <string name="send_code_to_placeholder">Отправили код на…</string>
    <string name="pin_code_rationale">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="confirm_button_text">Подтвердить</string>
    <string name="login_to_personal_account">Вход в личный кабинет</string>
    <string name="placeholder_text">Мы работаем над этим...</string>
    <string name="map">Карта</string>
    <string name="ask_employer">Задайте вопрос работодателю</string>
    <string name="employer_gets_your_question">Он получит его с откликом на вакансию</string>
    <string name="filters">По соответствию</string>
    <string name="search_for_employees">Поиск сотрудников</string>
    <string name="publish_vacancies">Размещение вакансий и доступ к базе резюме</string>
    <string name="search_for_employees_button">Я ищу сотрудников</string>
    <string name="vacancies_for_you">Вакансии для вас</string>
    <string name="recommendtions_search_hint">Должность, ключевые слова</string>
    <string name="full_time">полная занятость</string>
    <string name="full_day">полный день</string>
    <string name="part_time">частичная занятость</string>
    <string name="remote_work">удалённая работа</string>
    <string name="responsibilities_title">Ваши задачи</string>
</resources>
