<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/search_item"
        android:enabled="true"
        android:icon="@drawable/search_icon"
        android:title="@string/search_title" />
    <item
        android:id="@+id/liked_item"
        android:enabled="true"
        android:icon="@drawable/heart_icon"
        android:title="@string/liked_title" />

    <item
        android:id="@+id/applications_item"
        android:enabled="true"
        android:icon="@drawable/mail_icon"
        android:title="@string/applications_title" />


    <item
        android:id="@+id/messages_item"
        android:enabled="true"
        android:icon="@drawable/message_icon"
        android:title="@string/messages_title" />

    <item
        android:id="@+id/profile_item"
        android:enabled="true"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile_title" />
</menu>