<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_round_low"
    android:backgroundTint="@color/grey1"
    android:paddingHorizontal="@dimen/size_x16"
    android:paddingVertical="@dimen/size_x24">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for_employees"
        android:textAppearance="@style/TextAppearance.JobFinder.Title3"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@id/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_vacancies"
        android:textAppearance="@style/TextAppearance.JobFinder.ButtonText2"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@+id/find_employees"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <tech.kekulta.uikit.ButtonBig3
        android:id="@+id/find_employees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_x16"
        android:text="@string/search_for_employees_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitle" />

</merge>