<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_round_low"
    android:backgroundTint="@color/grey1"
    android:paddingHorizontal="@dimen/size_x16"
    android:paddingVertical="@dimen/size_x24">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_jobs"
        android:textAppearance="@style/TextAppearance.JobFinder.Title3"
        android:textColor="@color/text_color"
        app:layout_constraintBottom_toTopOf="@id/input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <tech.kekulta.uikit.MailInputField
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/size_x16"
        app:layout_constraintBottom_toTopOf="@id/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <tech.kekulta.uikit.ButtonBig1
        android:enabled="false"
        android:id="@+id/ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ok_with_password"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input" />


    <TextView
        android:id="@+id/ok_with_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/continue_with_password"
        android:textAppearance="@style/TextAppearance.JobFinder.ButtonText2"
        android:textColor="@color/blue_background_color"
        app:layout_constraintBottom_toBottomOf="@id/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toEndOf="@id/ok"
        app:layout_constraintTop_toTopOf="@id/ok" />
</merge>