<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:id="@+id/drag_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tint="@color/grey2"
            app:layout_constraintBottom_toTopOf="@id/avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/size_x48"
                    android:layout_height="@dimen/size_x48"
                    android:src="@drawable/avatar_icon_n"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/drag_handle" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/size_x16"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/resume_for_application"
                        android:textAppearance="@style/TextAppearance.JobFinder.Text1"
                        android:textColor="@color/grey3" />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textAppearance="@style/TextAppearance.JobFinder.Title3"
                        android:textColor="@color/text_color" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_x24"
                app:dividerColor="@color/grey2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avatar" />

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:backgroundTint="@color/black"
                android:hint="@string/your_cover_letter"
                android:inputType="text"
                android:minLines="2"
                android:textAppearance="@style/TextAppearance.JobFinder.Text1"
                android:textColor="@color/text_color"
                android:textColorHint="@color/grey3"
                android:visibility="gone" />

            <TextView
                android:id="@+id/add_cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_x32"
                android:text="@string/add_cover"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.JobFinder.Text1"
                android:textColor="@color/green" />

            <tech.kekulta.uikit.ButtonBig2
                android:id="@+id/apply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_x24"
                android:text="@string/apply" />
        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/indicator"
        android:layout_width="@dimen/size_x48"
        android:layout_height="@dimen/size_x48"
        android:layout_gravity="center"
        android:indeterminate="true"
        app:indicatorColor="@color/grey3" />
</FrameLayout>
