<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shadows">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/shadows"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/size_x16"
            tools:context=".presentation.ui.fragments.SearchFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:padding="@dimen/size_x8"
                    android:src="@drawable/back_arrow" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_x2"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/container_controls"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:visibility="invisible">

                    <ImageView
                        android:id="@+id/watch"
                        android:layout_width="@dimen/size_x24"
                        android:layout_height="@dimen/size_x24"
                        android:layout_marginStart="@dimen/size_x8"
                        android:src="@drawable/watch" />

                    <ImageView
                        android:id="@+id/share"
                        android:layout_width="@dimen/size_x24"
                        android:layout_height="@dimen/size_x24"
                        android:layout_marginStart="@dimen/size_x8"
                        android:src="@drawable/share" />

                    <tech.kekulta.uikit.LikeCheckbox
                        android:id="@+id/like"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/size_x8" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_x16"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.JobFinder.Title1"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/salary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_x16"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.JobFinder.Text1"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/experience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_x16"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.JobFinder.Text1"
                    android:textColor="@color/text_color" />


                <TextView
                    android:id="@+id/schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_x6"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.JobFinder.Text1"
                    android:textColor="@color/text_color" />

                <LinearLayout
                    android:id="@+id/activity_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_x24"
                    android:orientation="horizontal">

                    <tech.kekulta.jobfinder.presentation.ui.customviews.ActivityCardView
                        android:id="@+id/activity_applied"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <View
                        android:id="@+id/activity_divider"
                        android:layout_width="@dimen/size_x8"
                        android:layout_height="@dimen/size_x2" />

                    <tech.kekulta.jobfinder.presentation.ui.customviews.ActivityCardView
                        android:id="@+id/activity_looking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <tech.kekulta.jobfinder.presentation.ui.customviews.LocationCardView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_x24" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_x16"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.JobFinder.Text1"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/responsibility_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_x16"
                    android:text="@string/responsibilities_title"
                    android:textAppearance="@style/TextAppearance.JobFinder.Title1"
                    android:textColor="@color/text_color" />

                <TextView
                    android:id="@+id/responsibility"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/size_x8"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.JobFinder.Text1"
                    android:textColor="@color/text_color" />

                <LinearLayout
                    android:id="@+id/questions_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/size_x8"
                        android:text="@string/ask_employer"
                        android:textAppearance="@style/TextAppearance.JobFinder.Title4"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/employer_gets_your_question"
                        android:textAppearance="@style/TextAppearance.JobFinder.Title4"
                        android:textColor="@color/grey3" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false" />
            </LinearLayout>
        </LinearLayout>


        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/indicator"
            android:layout_width="@dimen/size_x48"
            android:layout_height="@dimen/size_x48"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="visible"
            app:indicatorColor="@color/grey3" />
    </FrameLayout>
</androidx.core.widget.NestedScrollView>